salaka.yaml
apiVersion: v1
kind: Service
metadata:
  name: salaka
  namespace: development
spec:
  selector:
    app: salaka
  ports:
  - port: 5000
    targetPort: 5000
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: salaka
  namespace: development
spec:
  selector:
    matchLabels:
      app: salaka
  replicas: 2
  template:
    metadata:
      labels:
        app: salaka
    spec:
      containers:
      - name: salaka
        image: fataraz/salaka:dev
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 5000
        volumeMounts:
          - mountPath: /app/.env
            name: cm-salaka
            subPath: .env
      volumes:
        - name: cm-salaka
          configMap:
            name: configmap-salaka
