ingress-salaka.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-salaka
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: dev-salaka.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: salaka
                port:
                  number: 5000
